src/test/ui/asm/naked-functions-testattrs.stderr
error[E0788]: cannot use testing attributes with `#[naked]`
  --> $DIR/naked-functions-testattrs.rs:12:1
   |
LL | #[naked]
   | ^^^^^^^^

error[E0788]: cannot use testing attributes with `#[naked]`
  --> $DIR/naked-functions-testattrs.rs:20:1
   |
LL | #[naked]
   | ^^^^^^^^

error[E0788]: cannot use testing attributes with `#[naked]`
  --> $DIR/naked-functions-testattrs.rs:28:1
   |
LL | #[naked]
   | ^^^^^^^^

error[E0788]: cannot use testing attributes with `#[naked]`
  --> $DIR/naked-functions-testattrs.rs:35:1
   |
LL | #[naked]
   | ^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0788`.
